--- a/html/dash.html
+++ b/html/dash.html
@@ -100,7 +100,7 @@
 
                 <h3 class="tituloGrafico">Indicadores</h3>
 
-
+<!--asdasdasdasd--->
                 <div id="filtroDiario">
                     <select id="selecfiltro">
                         <option id="filtro" value="hoje"> HOJE</option>
